src/objects/Coupon__c.object
<CustomObject>
    <label>Coupon</label>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
</CustomObject>